<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:id="@+id/aboutNavBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/howItWorksBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="10sp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/how_it_works_heading"/>
        <Button
            android:id="@+id/termsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="10sp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/terms_heading"/>
        <Button
            android:id="@+id/privacyBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="10sp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/privacy_heading"/>
        <Button
            android:id="@+id/sourceCodeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="10sp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/source_code_heading"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/howItWorksCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/how_it_works_heading" />
                    <TextView
                        android:id="@+id/howItWorks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_it_works_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/termsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/terms_heading" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_intro" />
                    <TextView
                        android:id="@+id/termsIntroBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/changes" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_changes" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/contact" />
                    <TextView
                        android:id="@+id/termsContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/privacyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/privacy_heading" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_intro" />
                    <TextView
                        android:id="@+id/privacyIntroBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/info_collection_and_use" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_information" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/security" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_security" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/changes" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_changes" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/contact" />
                    <TextView
                        android:id="@+id/privacyContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/sourceCodeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/source_code_heading" />
                    <TextView
                        android:id="@+id/sourceCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>