<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".MainActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    app:cardCornerRadius="5dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">
                    <Button
                        android:id="@+id/addFlightBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/light_button_selector"
                        android:textColor="@color/light_button_text_color_selector"
                        android:text="@string/add_flight" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    app:cardCornerRadius="5dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">
                    <Button
                        android:id="@+id/deleteFlightBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/light_button_selector"
                        android:textColor="@color/light_button_text_color_selector"
                        android:text="@string/delete_flight" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
                <Button
                    android:id="@+id/calculateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="16sp"
                    android:background="@drawable/light_button_selector"
                    android:textColor="@color/light_button_text_color_selector"
                    android:text="@string/calculate_flight_time"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>